Fix Strava workflow commit step

--- a/.github/workflows/strava-weekly.yml
+++ b/.github/workflows/strava-weekly.yml
@@ -27,12 +27,12 @@ jobs:
 
       - name: Commit and push
         run: |
-          if git diff --quiet; then
-            echo "No changes to commit."
-            exit 0
-          fi
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add data/strava/latest.json
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+            exit 0
+          fi
           git commit -m "Update Strava latest run"
           git push
