--- a/.github/workflows/strava-weekly.yml
+++ b/.github/workflows/strava-weekly.yml
@@ -2,7 +2,7 @@ name: Weekly Strava Update
 
 on:
   schedule:
-    - cron: "0 13 * * 1" # Mondays 13:00 UTC
+    - cron: "0 23 * * *" # Daily 23:00 UTC (~6pm EST)
   workflow_dispatch:
 
 jobs:
